feat: Agregada la función y dependencias de Netlify

--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -8,8 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "firebase-admin": "^13.4.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
